--- a/estilos/style.css
+++ b/estilos/style.css
@@ -17,6 +17,11 @@ main{
     height: 100vh;
     width: 100vw;
 }
+
+div{
+    width:50vw;
+}
+
 section.phone{
     position: absolute;
     left: 50%;
